# android_vendor_sprd

component/: mcp.xls  xls_diff.pl  xls_diff.sh
gps/: versioninfo.txt
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/: Android.mk  Makefile.in  NOTICE  NOTICE.txt  config_android.h  configure  configure.ac  omxil.dsw
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/autom4te.cache/: traces.1
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/doc/: Makefile.am  Makefile.in  omxregister-bellagio.1.in
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/include/: OMX_Audio.h  OMX_Component.h  OMX_ContentPipe.h  OMX_Core.h  OMX_IVCommon.h  OMX_Video.h
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/m4/: Makefile.in
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/: content_pipe_file.c  content_pipe_inet.c  omx_reference_resource_manager.c  omx_reference_resource_manager.h  omxcore.c  omxregister.c  queue.h  st_static_component_loader.c  utils.h
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/base/: Makefile.in  omx_base_audio_port.c  omx_base_component.c  omx_base_filter.c  omx_base_filter.h  omx_base_port.c  omx_base_port.h  omx_base_source.c  omx_base_video_port.c
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/components/: Makefile.am
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/components/audio_effects/: omx_audiomixer_component.c  omx_audiomixer_component.h  omx_volume_component.c  omx_volume_component.h
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/components/clocksrc/: Makefile.in  omx_clocksrc_component.h
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/components/videoscheduler/: Makefile.in  omx_video_scheduler_component.c
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/core_extensions/: Makefile.in
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/dynamic_loader/: Makefile.in  ste_dynamic_component_loader.c
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/: Makefile.in
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/: Makefile.am  Makefile.in
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/audio_effects/: Makefile.am  Makefile.in  omxaudiomixertest.c  omxaudiomixertest.h  omxvolcontroltest.c  omxvolcontroltest.h
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/common/: Makefile.am  Makefile.in
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/jpeg/: omxjpegdectest.c
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/resource_manager/: Makefile.in  omxprioritytest.c  omxrmtest.c
modules/media/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/video/: Makefile.in  omxparsertest.h  omxvideodectest.c  omxvideodectest.h
open-source/: .gitignore  base_special_packages.mk  (+5 more)
open-source/libs/vpu/: Falcon.h.old  configure  configure.in
open-source/libs/vpu/include/: mixer.h  vpuhelper.h  vpuio.h  vpurun.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/: Android.mk  ChangeLog  NEWS  NOTICE.txt  README  aclocal.m4  build_arm_linux.sh  build_native_linux.sh  config.h.in  configure  libomxil-bellagio.spec.in  omxil.dsp
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/autom4te.cache/: output.0  output.1  requests  traces.0
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/include/: Makefile.in  OMX_Video.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/m4/: ax_set_plugindir.m4
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/: Makefile.am  Makefile.in  common.c  common.h  omx_comp_debug_levels.h  omx_create_loaders_linux.c  omxcore.h  queue.c  tsemaphore.c  tsemaphore.h  utils.c
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/base/: Makefile.am  OMXComponentRMExt.c  omx_base_clock_port.c  omx_base_component.h  omx_base_image_port.c  omx_base_sink.c  omx_base_video_port.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/components/: Makefile.in
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/components/audio_effects/: Makefile.am  Makefile.in  library_entry_point.c
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/components/clocksrc/: Makefile.am  library_entry_point.c  omx_clocksrc_component.c
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/components/videoscheduler/: Makefile.am  library_entry_point.c  omx_video_scheduler_component.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/core_extensions/: Makefile.am  OMXCoreRMExt.c  OMXCoreRMExt.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/src/dynamic_loader/: Makefile.am  ste_dynamic_component_loader.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/audio_effects/: omxaudiomixertest.c
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/common/: user_debug_levels.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/jpeg/: Makefile.in  omxjpegdectest.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/resource_manager/: Makefile.am  README  omxrmtest.h
open-source/libs/vpu/mmf/openmax/libomxil-bellagio-0.9.3/test/components/video/: Makefile.am  omxparsertest.c  omxvideodectest.c  omxvideoenctest.c  omxvideoenctest.h
open-source/libs/vpu/mmf/openmax/libstagefrighthw/: Android.mk  VPUOMXPlugin.cpp  VPUOMXPlugin.h
open-source/libs/vpu/mmf/openmax/omxil-vpu-component/: Android.mk
open-source/libs/vpu/mmf/openmax/omxil-vpu-component/src/: OMX_VPU_Index.h  android_support.cpp  android_support.h  library_entry_point.c  omx_vpudec_component.c  omx_vpudec_component.h
open-source/libs/vpu/mmf/openmax/omxil-vpu-component/vpp_deinterlace/: vpp_deint.h  vpp_deint_api.c  vpp_drv_interface.c  vpp_drv_interface.h
open-source/libs/vpu/vdi/: android_memory_alloc.cpp  vdi.c  vdi.h
open-source/libs/vpu/vpuapi/: Android.mk  regdefine.h  vpuapi.c  vpuapi.h  vpuapifunc.c  vpuapifunc.h  vpuconfig.h  vpuhelper.c  vpuio.c  vputypes.h
(+7080 files in other folders)
